fixed vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-html {
+html, body {
     height: 100%;
     margin: 0px;
     font-size: 16px;
